--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # created by virtualenv automatically
 /keraz
-/kerazEjemplo.py
-/scnn_history.txt
-/simplenn_history.txt
+kerazEjemplo.py
+scnn_history.txt
+simplenn_history.txt
